--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="dice1">dice1</string>
     <string name="dice2">dice2</string>
     <string name="todo">TODO</string>
+    <string name="main_logo">This is the main Dicee logo</string>
 </resources>
